--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,7 +6,7 @@
   top: 10px; /* Adjusted to account for top margin */
   right: 10px; /* Adjusted to account for right margin */
   width: calc(50% - 20px); /* Adjusted to account for left and right margins */
-  height: calc(100% - 20px); /* Adjusted to account for top and bottom margins */
+  height: calc(100% - 100px); /* Adjusted to account for top, bottom margins and footer height */
   padding: 20px;
   background-color: #82b2fa; /* Temporary background color */
   border: 1px solid #ccc; /* Temporary border */
@@ -16,17 +16,16 @@
 
 .footer {
   position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 60px;
+  bottom: 0; /* Removed gap between footer and bottom of page */
+  left: 0; /* Full width from the left edge */
+  width: 100%; /* Full width of the page */
+  height: 80px;
   background-color: #333;
   color: #fff;
   text-align: center;
   line-height: 60px;
   box-sizing: border-box;
   padding: 10px;
-  margin-top: 10px;
 }
 
 .left-half-box {
@@ -37,9 +36,8 @@
   top: 10px; /* Adjusted to account for top margin */
   left: 10px; /* Adjusted to account for left margin */
   width: calc(50% - 20px); /* Adjusted to account for left and right margins */
-  height: calc(100% - 20px); /* Adjusted to account for top and bottom margins */
+  height: calc(100% - 100px); /* Adjusted to account for top, bottom margins and footer height */
   padding: 20px;
-
   border: 1px solid #ccc; /* Temporary border */
   box-sizing: border-box;
   border-radius: 10px;
