--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -41,4 +41,5 @@
   border: 1px solid #ccc; /* Temporary border */
   box-sizing: border-box;
   border-radius: 10px;
+  background-color:aliceblue;
 }
