changed name of header, changed image and changed weight of font in tabs

--- a/frontend/src/components/TabHolder.css
+++ b/frontend/src/components/TabHolder.css
@@ -33,6 +33,7 @@
     border-radius: 5px 5px 0 0;
     cursor: pointer;
     transition: background-color 0.3s, border-color 0.3s;
+    font-weight: bold;
 }
 
 .tab:hover {
