--- a/frontend/src/components/TabHolder.css
+++ b/frontend/src/components/TabHolder.css
@@ -33,7 +33,7 @@
     border-radius: 5px 5px 0 0;
     cursor: pointer;
     transition: background-color 0.3s, border-color 0.3s;
-    font-weight: bold;
+
 }
 
 .tab:hover {
@@ -72,4 +72,62 @@
     display: flex;
     justify-content: center;
     align-items: flex-start;
+}
+
+.dateform{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    padding: 20px;
+    margin-bottom: 20px;
+    background-color: #f9f9f9;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.dateform input,
+.dateform select,
+.dateform textarea {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.dateform label {
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.dateform button {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s;
+}
+
+.dateform button:hover {
+    background-color: #0056b3;
+}
+
+.submit-button {
+    padding: 10px 20px;
+    background-color: #74b0ff;
+    color: black;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.2s;
+}
+
+.submit-button:hover {
+    background-color: #3d78ff;
 }
